--- a/src/token_frontend/src/components/ui/PrimaryFeedback/PrimaryFeedback.css
+++ b/src/token_frontend/src/components/ui/PrimaryFeedback/PrimaryFeedback.css
@@ -1,4 +1,4 @@
-p.feedback {
+.primary-feedback {
   font-weight: var(--font-weight-bold);
   font-size: var(--font-size-base);
   font-family: var(--font-family-secondary);
@@ -9,14 +9,22 @@ p.feedback {
   animation: fadeIn var(--transition-slow) ease-in-out;
 }
 
-p.feedback.error {
+.primary-feedback.ok {
+  background: var(--color-success-bg-light);
+  border: 1px solid var(--color-success-border);
+  color: var(--color-success);
+}
+
+.primary-feedback.error {
   background: var(--color-error-bg-light);
   border: 1px solid var(--color-error-border);
   color: var(--color-error);
 }
 
-p.feedback.no-funds {
+.primary-feedback.warning {
   background: var(--color-warning-bg-light);
   border: 1px solid var(--color-warning-border);
   color: var(--color-warning);
 }
+
+
